--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -14,10 +14,12 @@
                           Anagrafiche
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownPractice">
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/practice">Practice</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" routerLink="/costmodel">Cost-Model</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" routerLink="/commesse">Commesse</a></li>
+                        <!--  <li class="nav-item"><a class="nav-link" href="#" routerLink="/practice">Practice</a></li>
                           <li class="nav-item"><a class="nav-link" href="#" routerLink="/clienti" >Clienti</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/commesse">Commesse</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/odl"     >OdL</a></li>
+                          
+                           <li class="nav-item"><a class="nav-link" href="#" routerLink="/odl"     >OdL</a></li> -->
                           <!-- <li class="nav-item"><a class="nav-link" href="#" routerLink="/inspd"  >Responsabili practice</a></li> -->
                       </ul>
                   </li>
@@ -27,9 +29,9 @@
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownRisorse">
                           <li class="nav-item"><a class="nav-link" href="#" routerLink="/risorse">Risorse</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/livelli">Livelli risorse</a></li>
-                          <!-- <li class="nav-item"><a class="nav-link" href="#" routerLink="/inspr"  >Ruoli risorsa</a></li> -->
-                          <!-- <li class="nav-item"><a class="nav-link" href="#" routerLink="/insprar">Risorse-Practice</a></li> -->
+                          <!-- <li class="nav-item"><a class="nav-link" href="#" routerLink="/livelli">Livelli risorse</a></li>
+                           <li class="nav-item"><a class="nav-link" href="#" routerLink="/inspr"  >Ruoli risorsa</a></li> 
+                           <li class="nav-item"><a class="nav-link" href="#" routerLink="/insprar">Risorse-Practice</a></li> -->
                       </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -45,6 +47,8 @@
                           Report
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownReport">
+                       
+                          <li class="nav-item"><a class="nav-link" routerLink="/prospetto-mese"> prospetto mese</a></li>
                           <li class="nav-item"><a class="nav-link" routerLink="/prospetto-generale">Prospetto generale</a></li>
                           <li class="nav-item"><a class="nav-link" routerLink="/rendicontazione"   >Rendicontazione</a></li>
                       </ul>
